[package]
name = "subtivity"
version = "0.1.1"
description = "Subtivity"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
substreams-sink-kv = "0.1"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.0.0"

[workspace]
members = [
    "blocks/*"
]

[workspace.dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
substreams-antelope = "0.1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"