[package]
name = "subtivity"
version = "0.3.1"
description = "Subtivity"
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-entity-change = "1.3.0"

[workspace]
members = [
    "blocks/*"
]

[workspace.dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.3"
substreams-ethereum = "0.9"
substreams-near = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
