[package]
name = "subtivity_block_antelope"
version = "0.1.0"
description = "Subtivity Block for Antelope"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-antelope = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
