[package]
name = "subtivity_block_stats_antelope"
version = "0.1.0"
description = "Subtivity Block stats for Antelope"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
subtivity = { path = "../.." }
substreams-antelope = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
