[package]
name = "subtivity_block_stats_ethereum_beacon"
version = "0.1.0"
description = "Subtivity Block stats for Ethereum Beacon Chain"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }