[package]
name = "subtivity_block_stats_bitcoin"
version = "0.1.0"
description = "Subtivity Block stats for Bitcoin"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-bitcoin = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }