[package]
name = "subtivity_block_stats_ethereum"
version = "0.1.0"
description = "Subtivity Block stats for Ethereum"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }