[package]
name = "subtivity_block_evm"
version = "0.1.0"
description = "Subtivity Block for EVM"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }