[package]
name = "subtivity_block_stats_near"
version = "0.1.0"
description = "Subtivity Block stats for Near"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-near = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }