[package]
name = "subtivity_antelope"
version = "0.1.0"
description = "Subtivity for Antelope"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { version = "0.11.2" }
prost-types = "0.11.2"
substreams-antelope = "0.1"
substreams = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-entity-change =  { workspace = true }
substreams-database-change =  { workspace = true }
subtivity-common = { path = "../../common" }
