[package]
name = "subtivity_antelope"
version = "0.1.0"
description = "Subtivity for Antelope"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-entity-change =  { workspace = true }
substreams-database-change =  { workspace = true }
subtivity-common = { path = "../../common" }