[package]
name = "eth"
version = "0.0.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "0.11.6"

# Use latest from https://crates.io/crates/substreams
substreams = "0.5.1"

# Use latest from https://crates.io/crates/substreams-ethereum
#substreams-ethereum = "0.1.2"

[build-dependencies]
anyhow = "1"
prost-build = "0.11.6"
substreams-ethereum = "0.9.0"