[package]
name = "subtivity_eos"
version = "0.1.0"
description = "Subtivity for EOS"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-entity-change =  { workspace = true }
substreams-database-change =  { workspace = true }
subtivity-common = { path = "../../common" }